--- a/todoapp/index.html
+++ b/todoapp/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-				<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<link rel="icon" href="favicon.png">
+
 		
 		<title>Ants | Todo list</title>
 		<!-- Roboto font embed -->
